--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx --watch server.ts",
-    "start": "tsx server.ts"
+    "start": "tsx server.ts",
+    "migrate": "prisma migrate dev --name init"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "cookie-parser": "^1.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.0",
+    "prisma": "^6.9.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
