--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.16.0",
     "prisma": "^6.9.0"
   },
