--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^6.14.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "multer": "^2.0.1",
     "pg": "^8.16.0",
     "prisma": "^6.9.0"
   },
